Fix pmd and findbugs errors